@@ -1,6 +1,6 @@
 Package: spgrass6
-Version: 0.6-9
-Date: 2009-09-04
+Version: 0.6-10
+Date: 2009-09-23
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
