@@ -1,3 +1,12 @@
+2009-09-23 11:27  rsbivand
+
+	* DESCRIPTION, R/xml1.R: no paramters in interface description
+	  warning
+
+2009-09-09 08:42  rsbivand
+
+	* ChangeLog, inst/ChangeLog: tidy
+
 2009-09-05 00:15  rsbivand
 
 	* ChangeLog, inst/ChangeLog: fixing UTF-8
